feat: data integration into table and link to details page

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 /* padrão: claro */
 :root {
   --bg-surface: theme(colors.white);
-  --bg-surface-hover: theme(colors.gray.100);         
+  --bg-surface-hover: theme(colors.gray.100); 
+  --bg-surface-hover-secundary: theme(colors.gray.200);         
   --text-base: theme(colors.gray.900);
   --border-base: theme(colors.gray.100);
 }
@@ -14,7 +15,8 @@
 /* no escuro */
 html.dark {
   --bg-surface: theme(colors.gray.700);
-  --bg-surface-hover: theme(colors.gray.800);     
+  --bg-surface-hover: theme(colors.gray.800);  
+  --bg-surface-hover-secundary: theme(colors.gray.900);   
   --text-base: theme(colors.gray.100);
   --border-base: theme(colors.gray.800);
 }
@@ -24,12 +26,9 @@ body {
   @apply font-poppins;
   background-color: var(--bg-surface);
   color: var(--text-base);
-  border: var(--border-base);
 }
 
-body:hover {
-  background-color: var(--bg-surface-hover);
-}
+
 
 
 
